--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -29,7 +29,7 @@ runs:
         declare changesets_json="[]"
         # loop through updated-dependencies-json array
         echo "${{ inputs.updated-dependencies-json }}"
-        echo "${{ inputs.updated-dependencies-json }}" | jq -r '.[]'
+        echo "${{ inputs.updated-dependencies-json }}" | jq -r '.'
         exit 1
         for dep in "${{ inputs.updated-dependencies-json }}" | jq -r '.[]'; do
           echo "dep: $dep"
