--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -55,7 +55,7 @@ jobs:
 
       - uses: ./.github/actions/dependabot-npm-generate-changesets
         with:
-          updated-dependencies-json: ${{ steps.metadata.outputs.updated-dependencies-json }}
+          updated-dependencies-json: ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}
           version-update-map: '{"semver-patch": "patch", "semver-minor": "patch", "semver-major": "patch"}'
 
       - run: |
