--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -45,6 +45,8 @@ jobs:
           github-token: ${{ steps.app-token.outputs.token }}
       - run: ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}
         shell: cat {0}
+      - run: ${{ steps.metadata.outputs.updated-dependencies-json }}
+        shell: cat {0}
       - run: exit 1
 
       - uses: actions/checkout@v4
