--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -46,8 +46,10 @@ jobs:
       - run: ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}
         shell: cat {0}
       - run: ${{ steps.metadata.outputs.updated-dependencies-json }}
-        shell: cat {0}
-      - run: exit -1
+        shell: cat {0} > /tmp/dependencies.json
+      - run: |
+          cat /tmp/dependencies.json
+          exit -1
         shell: bash
       # read array from echo steps.dependabot-metadata.outputs.updated-dependencies-json
       - run: |
