--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -45,8 +45,8 @@ jobs:
           github-token: ${{ steps.app-token.outputs.token }}
       - run: ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}
         shell: cat {0}
-      - run: ${{ steps.metadata.outputs.updated-dependencies-json }}
-        shell: cat {0} > $RUNNER_TEMP/dependencies.json
+      - run: echo ${{ steps.metadata.outputs.updated-dependencies-json }} > $RUNNER_TEMP/dependencies.json
+        shell: bash
       - run: |
           cat $RUNNER_TEMP/dependencies.json
           exit -1
