--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -43,11 +43,20 @@ jobs:
         uses: dependabot/fetch-metadata@v2
         with:
           github-token: ${{ steps.app-token.outputs.token }}
+
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+          token: ${{ steps.app-token.outputs.token }}
+          # Make sure the value of GITHUB_TOKEN will not be persisted in repo's config
+          # This fails with the push command
+          # persist-credentials: false
+
       - run: ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}
         shell: cat {0}
-      - run: echo ${{ steps.metadata.outputs.updated-dependencies-json }} > $RUNNER_TEMP/dependencies.json
+      - run: echo ${{ steps.metadata.outputs.updated-dependencies-json }} > dependencies.json
       - run: |
-          cat $RUNNER_TEMP/dependencies.json
+          cat dependencies.json
           exit -1
       # read array from echo steps.dependabot-metadata.outputs.updated-dependencies-json
       - run: |
@@ -59,14 +68,6 @@ jobs:
           # done
           # exit -1
         shell: bash
-
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
-          token: ${{ steps.app-token.outputs.token }}
-          # Make sure the value of GITHUB_TOKEN will not be persisted in repo's config
-          # This fails with the push command
-          # persist-credentials: false
 
       - uses: ./.github/actions/dependabot-npm-generate-changesets
         with:
