--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -58,12 +58,11 @@ jobs:
           echo "ZZZ" > dependencies.json
           ls -la dependencies.json
           cat dependencies.json
-      - run: |
-          echo "${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}" > dependencies.json
-          ls -la dependencies.json
-          cat dependencies.json
-          jq -r '.[]' dependencies.json
-          exit -1
+      - run: echo "${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}" > dependencies.json
+      - run: ls -la dependencies.json
+      - run: cat dependencies.json
+      - run: jq -r '.[]' dependencies.json
+      - run: exit -1
       # read array from echo steps.dependabot-metadata.outputs.updated-dependencies-json
       - run: |
           echo "${{ steps.metadata.outputs.updated-dependencies-json }}"
