--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -25,6 +25,10 @@ runs:
       shell: cat {0}
     - run: exit -1
       shell: bash
+    - run: echo ${{ inputs.updated-dependencies-json }} | jq -r '.[]'
+      shell: bash
+    - run: exit -1
+      shell: bash
     - id: generate-changesets
       shell: bash
       # scan updated-dependencies-json array from (dependabot/fetch-metadata)
