--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -38,11 +38,7 @@ runs:
       run: |
         declare changesets_json="[]"
         # loop through updated-dependencies-json array
-        echo "${{ inputs.updated-dependencies-json }}"
-        exit -1
-        echo "${{ inputs.updated-dependencies-json }}" | jq -r '.'
-        exit -1
-        for dep in "${{ inputs.updated-dependencies-json }}" | jq -r '.[]'; do
+        for dep in echo ${{ inputs.updated-dependencies-json }} | jq -r '.[]'; do
           echo "dep: $dep"
         done
         exit -1
