--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -20,7 +20,7 @@ runs:
   using: "composite"
   steps:
     - run: |
-        for dep in ${{ inputs.updated-dependencies-json }} | jq -r '.[]'; do
+        for dep in $(echo ${{ inputs.updated-dependencies-json }} | jq -r '.[]'); do
           echo "dep: $dep"
         done
       shell: bash
