--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -23,7 +23,7 @@ runs:
         for dep in $(echo ${{ inputs.updated-dependencies-json }} | jq -r '.[] | @base64'); do
           echo "dep: $dep"
           _jq() {
-            echo ${dep} | jq -r ${1}
+            echo ${dep} | base64 --decode | jq -r ${1}
           }
           echo "jq: $(_jq '.')"
         done
