--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -24,7 +24,7 @@ runs:
       run: |
         declare changesets_json="[]"
         # loop through updated-dependencies-json array
-        for dep in $(echo ${{ inputs.updated-dependencies-json }} | jq -r '.[]' | base64); do
+        for dep in $(echo ${{ inputs.updated-dependencies-json }} | jq -r '.[] | @base64'); do
           echo "dep: $dep"
           _jq() {
             echo ${dep} | base64 --decode | jq -r ${1}
@@ -38,7 +38,6 @@ runs:
           echo "PKG_JSON: $PKG_JSON"
           PKG_NAME=$(jq -r '.name' $PKG_JSON)
           echo "PKG_NAME: $PKG_NAME"
-          exit -1
           DEP_NAME=$(_jq '.dependencyName')
           echo "DEP_NAME: $DEP_NAME"
           DEP_PREV_VERSION=$(_jq '.prevVersion')
