--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -52,7 +52,7 @@ runs:
           DEP_SEMVER_TYPE=$(echo $DEP_UPDATE_TYPE | cut -d':' -f2)
           echo "DEP_SEMVER_TYPE: $DEP_SEMVER_TYPE"
           echo ${{ tojson(inputs.version-update-map) }}
-          echo ${{ tojson(inputs.version-update-map) }} | jq -r '.$DEP_SEMVER_TYPE'
+          echo ${{ tojson(inputs.version-update-map) }} | jq -r '.["$DEP_SEMVER_TYPE"]'
           DEP_CHANGESET_TYPE=$(echo ${{ tojson(inputs.version-update-map) }} | jq -r --arg semver_type "$DEP_SEMVER_TYPE" '.[$semver_type]')
           echo "DEP_CHANGESET_TYPE: $DEP_CHANGESET_TYPE"
           # changeset file = ./.changeset/<directory-with-replaced-special-symbols>-<package-name>.md
