--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -58,7 +58,8 @@ runs:
           DEP_CHANGESET_TYPE=$(echo ${{ tojson(inputs.version-update-map) }} | jq -r --arg semver_type "$DEP_SEMVER_TYPE" '.[$semver_type]')
           echo "DEP_CHANGESET_TYPE: $DEP_CHANGESET_TYPE"
           # changeset file = ./.changeset/<directory-with-replaced-special-symbols>-<package-name>.md
-          if [$PKG_DIR == "."]; then
+          DEP_NAME_CHANGESET=${DEP_NAME//\//-}
+          if ["$PKG_DIR" == "."]; then
             CHANGESET_FILE="./.changeset/${PKG_NAME}-${DEP_NAME}.md"
           else
             # replace / with - in PKG_DIR
