--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -87,8 +87,8 @@ runs:
           changesets_json=$(echo $changesets_json | jq --arg file $CHANGESET_FILE '. + [$file]')
           echo "changesets-json: $changesets_json"
         done
-        echo 'changesets-json: $changesets_json'
-        echo 'changesets-json=$changesets_json' >> $GITHUB_OUTPUT
+        echo "changesets-json: '$changesets_json'"
+        echo "changesets-json='$changesets_json'" >> $GITHUB_OUTPUT
 
     - run: ls -la .changeset
       shell: bash
