--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -88,8 +88,8 @@ runs:
           echo "changesets-json: $changesets_json"
         done
         changesets_json=$(echo $changesets_json | jq -c '.')
-        echo "changesets-json: '$changesets_json'"
-        echo "changesets-json='$changesets_json'" >> $GITHUB_OUTPUT
+        echo "changesets-json: $changesets_json"
+        echo "changesets-json=$changesets_json" >> $GITHUB_OUTPUT
 
     - run: ls -la .changeset
       shell: bash
