--- a/.github/actions/dependabot-npm-generate-changesets/action.yml
+++ b/.github/actions/dependabot-npm-generate-changesets/action.yml
@@ -97,7 +97,7 @@ runs:
       shell: bash
     - run: echo ${{ steps.generate-changesets.outputs.changesets-json }}
       shell: bash
-    - run: echo ${{ steps.generate-changesets.outputs.changesets-json }} | jq -r '.[]'
+    - run: echo "${{ steps.generate-changesets.outputs.changesets-json }}" | jq -r '.[]'
       shell: bash
     - run: exit -1
       shell: bash
