--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -29,15 +29,6 @@ jobs:
           git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-      # - id: committer
-      #   run: |
-      #     echo "user=${{ steps.app-token.outputs.app-slug }}[bot]" >> "$GITHUB_OUTPUT"
-      #     echo "email=${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com" >> "$GITHUB_OUTPUT"
-      #     echo "full=${{ steps.app-token.outputs.app-slug }}[bot] <${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>"  >> "$GITHUB_OUTPUT"
-      # - run: |
-      #     echo "committer user is ${{ steps.committer.outputs.user }}"
-      #     echo "committer email is ${{ steps.committer.outputs.email }}"
-      #     echo "committer string is ${{ steps.committer.outputs.full }}"
 
       - id: metadata
         uses: dependabot/fetch-metadata@v2
@@ -48,31 +39,13 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           token: ${{ steps.app-token.outputs.token }}
-          # Make sure the value of GITHUB_TOKEN will not be persisted in repo's config
-          # This fails with the push command
-          # persist-credentials: false
-
-      - run: ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}
-        shell: cat {0}
-      - run: |
-          echo "ZZZ" > dependencies.json
-          ls -la dependencies.json
-          cat dependencies.json
-      - run: echo "${{ steps.metadata.outputs.updated-dependencies-json }}" > dependencies.json
-      - run: ls -la dependencies.json
-      - run: cat dependencies.json
-      - run: echo ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }} > dependencies.json
-      - run: ls -la dependencies.json
-      - run: cat dependencies.json
-      - run: jq -r '.[]' dependencies.json
-      - run: echo ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }} | jq -r '.[]'
 
       - uses: ./.github/actions/dependabot-npm-generate-changesets
         with:
           updated-dependencies-json: ${{ tojson(steps.metadata.outputs.updated-dependencies-json) }}
 
       - run: |
-          # Check if there are any changes to commit
+          # Check if there are any changes to commit in the .changeset directory
           if [ -z "$(git status --porcelain)" ]; then
             echo "No changes to commit"
             exit 0
