--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -56,11 +56,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
-      # - name: Enable auto-merge for Dependabot PRs
-      #   if: |
-      #     (steps.metadata.outputs.update-type == 'version-update:semver-minor' ||
-      #       steps.metadata.outputs.update-type == 'version-update:semver-patch')
-      #   run: gh pr merge --auto --squash "$PR_URL"
-      #   env:
-      #     PR_URL: ${{github.event.pull_request.html_url}}
-      #     GH_TOKEN: ${{ steps.app-token.outputs.token }}
+      - name: Enable auto-merge for Dependabot PRs
+        if: |
+          (steps.metadata.outputs.update-type == 'version-update:semver-minor' ||
+            steps.metadata.outputs.update-type == 'version-update:semver-patch')
+        run: gh pr merge --auto --squash "$PR_URL"
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
